--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Каталог</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
-								<a class="dropdown-item" href="c:\Users\Валерій\Desktop\Сайт постільної білизни\Women.html">Жіночий одяг</a>
+								<a class="dropdown-item" href="https://github.com/Maverick9519/ALLAShop/blob/main/Women.html">Жіночий одяг</a>
 								<a class="dropdown-item" href="C:\Users\Валерій\Desktop\Сайт постільної білизни\Man.html">Чоловічий одяг</a>
 							</div>
 						</li>
