--- a/Women.html
+++ b/Women.html
@@ -50,8 +50,8 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Каталог</a>
 							<div class="dropdown-menu" aria-labelledby="dropdown-a">
-								<a class="dropdown-item" href="C:\Users\Валерій\Desktop\Сайт постільної білизни\Women.html">Жіночий Одяг</a>
-								<a class="dropdown-item" href="C:\Users\Валерій\Desktop\Сайт постільної білизни\Man.html">Чоловічий одяг</a>
+								<a class="dropdown-item" href="Women.html">Жіночий Одяг</a>
+								<a class="dropdown-item" href="Man.html">Чоловічий одяг</a>
 							</div>
 						</li>
 						<li class="nav-item"><a class="nav-link" href="contact.html">Контакти</a></li>
