--- a/Women.html
+++ b/Women.html
@@ -334,16 +334,16 @@
 
 				<div class="col-lg-4 col-md-6 special-grid 3">
 					<div class="gallery-single fix">
-						<img src="C:\Users\Валерій\Desktop\Сайт постільної білизни\images\Жіночий одяг\Домашній одяг\219RX-727-ager.jpeg"
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/8c/bc57aad3-0668-11e8-b533-00155d516702/8c04faa9-c0ff-11ee-8588-d8cb8a9c13c3-18-763x1132.webp"
 							class="img-fluid" alt="Image">
 						<div class="why-text">
-							<h4>Халат жіночий домашній на блискавці</h4>
+							<h4>Домашній костюм велюровий</h4>
 							<p>Бренд: AGER</p>
-							<p>Колір: Чорний</p>
+							<p>Колір: Пудровий</p>
 							<p>Декорування: Однотонні</p>
-							<p>Країна-виробник товару: Китай</p>
-							<p>Матеріал: Бавовна</p>
-							<p>Розмір: XL</p>
+							<p>Країна-виробник товару: Україна</p>
+							<p>Матеріал: Велюр</p>
+							<p>Розмір: 48-50, 52-54, 44-46</p>
 							<h5> ₴600</h5>
 						</div>
 					</div>
