--- a/Women.html
+++ b/Women.html
@@ -344,7 +344,58 @@
 							<p>Країна-виробник товару: Україна</p>
 							<p>Матеріал: Велюр</p>
 							<p>Розмір: 48-50, 52-54, 44-46</p>
-							<h5> ₴600</h5>
+							<h5> ₴560</h5>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 special-grid 3">
+					<div class="gallery-single fix">
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/66/feee7c9d-e02c-11e0-80a9-0015c56feef5/66f986ca-b9ec-11ee-8588-d8cb8a9c13c3-763x1132.webp"
+							class="img-fluid" alt="Image">
+						<div class="why-text">
+							<h4>Піжама жіноча плюшева</h4>
+							<p>Бренд: AGER</p>
+							<p>Колір: Синій</p>
+							<p>Декорування: з принтом</p>
+							<p>Країна-виробник товару: Україна</p>
+							<p>Матеріал: Махра</p>
+							<p>Розмір: 40-42, 44-46</p>
+							<h5> ₴975</h5>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 special-grid 4">
+					<div class="gallery-single fix">
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/23/feee7c85-e02c-11e0-80a9-0015c56feef5/23f7fc33-1273-11ef-8588-d8cb8a9c13c3-763x1132.webp"
+							class="img-fluid" alt="Image">
+						<div class="why-text">
+							<h4>Жилет жіночий</h4>
+							<p>Бренд: AGER</p>
+							<p>Колір: Бежевий</p>
+							<p>Декорування: Однотонні</p>
+							<p>Країна-виробник товару: Китай</p>
+							<p>Матеріал: Синтепон, 100% поліестер</p>
+							<p>Розмір: L,XL,XXL,XXXL,4XL</p>
+							<h5> ₴975</h5>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 special-grid 4">
+					<div class="gallery-single fix">
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/e7/feee7c91-e02c-11e0-80a9-0015c56feef5/e7bf52b7-e396-11ee-8588-d8cb8a9c13c3-16-763x1132.webp"
+							class="img-fluid" alt="Image">
+						<div class="why-text">
+							<h4>Жилет жіночий</h4>
+							<p>Бренд: AGER</p>
+							<p>Колір: Бежевий</p>
+							<p>Декорування: Однотонні</p>
+							<p>Країна-виробник товару: Китай</p>
+							<p>Матеріал: Синтепон, 100% поліестер</p>
+							<p>Розмір: L,XL,XXL,XXXL,4XL</p>
+							<h5> ₴975</h5>
 						</div>
 					</div>
 				</div>
