--- a/Women.html
+++ b/Women.html
@@ -378,7 +378,7 @@
 							<p>Країна-виробник товару: Китай</p>
 							<p>Матеріал: Синтепон, 100% поліестер</p>
 							<p>Розмір: L,XL,XXL,XXXL,4XL</p>
-							<h5> ₴975</h5>
+							<h5> ₴710</h5>
 						</div>
 					</div>
 				</div>
@@ -388,14 +388,31 @@
 						<img src="https://ager.ua/image/cachewebp/catalog/import_files/e7/feee7c91-e02c-11e0-80a9-0015c56feef5/e7bf52b7-e396-11ee-8588-d8cb8a9c13c3-16-763x1132.webp"
 							class="img-fluid" alt="Image">
 						<div class="why-text">
+							<h4>Жилет жіночий з капюшоном</h4>
+							<p>Бренд: AGER</p>
+							<p>Колір: Сірий</p>
+							<p>Декорування: Однотонні</p>
+							<p>Країна-виробник товару: Україна</p>
+							<p>Матеріал: Нейлон, поліестер</p>
+							<p>Розмір: S,L,XL,XXL</p>
+							<h5> ₴710</h5>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 special-grid 4">
+					<div class="gallery-single fix">
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/e9/72992fb7-e030-11e0-80a9-0015c56feef5/e9b68969-e398-11ee-8588-d8cb8a9c13c3-18-763x1132.webp"
+							class="img-fluid" alt="Image">
+						<div class="why-text">
 							<h4>Жилет жіночий</h4>
 							<p>Бренд: AGER</p>
-							<p>Колір: Бежевий</p>
+							<p>Колір: Чорний</p>
 							<p>Декорування: Однотонні</p>
-							<p>Країна-виробник товару: Китай</p>
-							<p>Матеріал: Синтепон, 100% поліестер</p>
-							<p>Розмір: L,XL,XXL,XXXL,4XL</p>
-							<h5> ₴975</h5>
+							<p>Країна-виробник товару: Україна</p>
+							<p>Матеріал: Нейлон</p>
+							<p>Розмір: S,M,L,XL</p>
+							<h5> ₴680</h5>
 						</div>
 					</div>
 				</div>
