--- a/Women.html
+++ b/Women.html
@@ -417,6 +417,23 @@
 					</div>
 				</div>
 
+				<div class="col-lg-4 col-md-6 special-grid 4">
+					<div class="gallery-single fix">
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/72/ef922181-df9b-11e0-80a9-0015c56feef5/72694956-e390-11ee-8588-d8cb8a9c13c3-763x1132.webp"
+							class="img-fluid" alt="Image">
+						<div class="why-text">
+							<h4>Жилет жіночий з капюшоном</h4>
+							<p>Бренд: AGER</p>
+							<p>Колір: Білий</p>
+							<p>Декорування: Однотонні</p>
+							<p>Країна-виробник товару: Україна</p>
+							<p>Матеріал: Нейлон, поліестер</p>
+							<p>Розмір: S,M,L,XL</p>
+							<h5> ₴810</h5>
+						</div>
+					</div>
+				</div>
+
 
 
 
