--- a/Women.html
+++ b/Women.html
@@ -434,6 +434,23 @@
 					</div>
 				</div>
 
+				<div class="col-lg-4 col-md-6 special-grid 4">
+					<div class="gallery-single fix">
+						<img src="https://ager.ua/image/cachewebp/catalog/import_files/c6/feee7c85-e02c-11e0-80a9-0015c56feef5/c6a84796-e39a-11ee-8588-d8cb8a9c13c3-763x1132.webp"
+							class="img-fluid" alt="Image">
+						<div class="why-text">
+							<h4>Жилет жіночий однотонний</h4>
+							<p>Бренд: AGER</p>
+							<p>Колір: Бежевий</p>
+							<p>Декорування: Однотонні</p>
+							<p>Країна-виробник товару: Україна</p>
+							<p>Матеріал: Нейлон, поліестер</p>
+							<p>Розмір: XL</p>
+							<h5> ₴680</h5>
+						</div>
+					</div>
+				</div>
+
 
 
 
