--- a/index.html
+++ b/index.html
@@ -129,15 +129,12 @@
 	<div class="about-section-box">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-12">
-					<img src="images/about-img.jpg" alt="" class="img-fluid">
 				</div>
-				<div class="col-lg-6 col-md-6 col-sm-12 text-center">
+				<div class="text-center">
 					<div class="inner-column">
 						<h1>Вітаємо вас в нашій фірмі <span>ALLA</span></h1>
 						<p>Ми - фірма з індивідуального пошиття постільної білизни. Наші дизайнери підберуть вам ! за вашим смаком та зроблять за вашими розмірами. </p>
 					</div>
-				</div>
 			</div>
 		</div>
 	</div>
